Fixed scrollbar styling

--- a/styles/pages/pages.css
+++ b/styles/pages/pages.css
@@ -35,7 +35,8 @@ main > img {
 
 ::-webkit-scrollbar {
   width: 2ch;
-  background-color: var(--background);
+  background-color: rgba(0, 0, 0, 0);
+  border-left: 1px black solid;
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 0 2ch 2ch 0;
